19-03-2023
    Added functionality for new users to Sign Up.
    Added functionality for existing users to login.
    Added functionality for Admin to add new dish.